# 4011-mech-flower

./: .gitignore  README.md
oslib/base_hci/: base_hci.c  base_hci.h
oslib/bsu_hci/: bsu_hci.c  bsu_hci.h
oslib/mobile_hci/: mobile_hci.c  mobile_hci.h
pf/base/: CMakeLists.txt  nrf52840dongle_nrf52840.overlay
pf/bsu/: CMakeLists.txt  esp32c3_devkitm.overlay  prj.conf
pf/flower_base/: README.md  project.properties
pf/flower_base/src/: flower_base.ino
pf/flower_head/: flower_head_main.ino
pf/flower_head/flower_head/: flower_head.ino
pf/mobile/: CMakeLists.txt  prj.conf
pf/pc/: basenode.py
tools/: flash_esp32.sh  flash_nrf.sh  flash_thing.sh
